﻿0.6.4
=====

Translation Updates:

  * Updated Dutch translations (Angel).


0.6.3
=====

New Features:

  * Upgrade to Spring Framework 2.5.1.
  * The Special:Translation page will now default to the user's default
    language instead of defaulting to English.
  * Upgrade to Acegi Security 1.0.6.
  * Add support for IPv6 to prevent database errors on IPv6 systems.  Problem
    reported by huntc.

Bugfixes:

  * Umlauts, ampersands and other special characters were being double-escaped
    in the user menu.  Bug reported by Толик.
  * Resolve a CSS issue that impacted display of diffs.  Reported by legendsen.
  * When an access denied message is displayed make sure that the login page
    displayed is in the same virtual wiki as the orginal page request.  Bug
    reported by Feilong Huang.
  * Fix several potential (although unlikely) NPE scenarios identified by
    static code analysis tools.
  * Update the CSS for pre tags to prevent overflows in tables.  Reported by
    Michael Habbert.
  * Fix a bug that broke the Special:Contributions when using a non-ASCII user
    login.

Translation Updates:

  * Updated Dutch translations (Angel).
  * Added Galician translations (mmeixide).
  * Updated German translations (axelclk).
  * Updated Japanese translations (nattolover).
  * Added Portugese translations (mmeixide).
  * Updated Spanish translations (AngelPinazo & mmeixide).


0.6.2
=====

New Features:

  * Upgrade project dependencies to Servlet 2.4 and JSP 2.0.  Bugs in previous
    JAMWiki configuration settings required these dependencies, so this change
    should be backwards-compatible.
  * Upgrade to JSTL 1.1.2 (from 1.0.6).
  * Make the valid login, topic name, and role name patterns configurable.
  * Replace several custom methods with the org.apache.commons.lang equivalent.
  * During setup, create a default directory to use for image and other file
    uploads to hopefully eliminate some confusion.